<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_gray_apollo">



  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingTop = "10dp"
      >
    <ImageButton
        android:id="@+id/atakImage_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="5"
        android:background="@null"
        android:src="@drawable/atak_logo">

    </ImageButton>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pervitinadexffp"
        android:foregroundGravity="center"
        android:paddingLeft="50dp"
        android:paddingTop="15dp"
        android:gravity="left"
        android:text="@string/app_desc"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_weight="1"
        />
  </LinearLayout>



  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">



      <Button
          android:id="@+id/speechToText_btn"
          style="@style/apolloDarkButton"
          android:drawableLeft="@drawable/speech2text"
          android:drawablePadding="30dp"
          android:gravity="left"
          android:singleLine="true"
          android:text="@string/speech2text" />

      <Button
          android:id="@+id/speakerIDv2_btn"
          style="@style/apolloDarkButton"
          android:gravity="left"
          android:drawableLeft="@drawable/speaker_recog"
          android:drawablePadding="30dp"
          android:text="Speaker Recognition" />
          <!-- android:visibility="gone"  -->
      
      <Button
          android:id="@+id/faceRec_btn"
          style="@style/apolloDarkButton"
          android:gravity="left"
          android:drawableLeft="@drawable/facialrecog"
          android:drawablePadding="30dp"
          android:text="Face Recognition" />

      <Button
          android:id="@+id/faceRecV2_btn"
          style="@style/apolloDarkButton"
          android:gravity="left"
          android:drawableLeft="@drawable/facialrecog"
          android:drawablePadding="30dp"
          android:text="Face Recognition (lib)" />

      <Button
          android:id="@+id/ocr_btn"
          style="@style/apolloDarkButton"
          android:gravity="left"
          android:drawableLeft="@drawable/ocr_recog"
          android:drawablePadding="30dp"
          android:text="OCR" />

      <Button
          android:id="@+id/upload_btn"
          style="@style/apolloDarkButton"
          android:gravity="left"
          android:drawableLeft="@drawable/upload"
          android:drawablePadding="30dp"
          android:text="Upload" />

      <Space
          android:layout_width="match_parent"
          android:layout_height="80dp" />

      <TextView
        android:id="@+id/login_error_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pervitinadexffp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/login_error_text"
        android:textColor="@color/warning_red"
        android:textSize="12sp"
        android:layout_weight="1"

       />
      <Button
          android:id="@+id/logout_btn"
          style="@style/apolloDarkButton"
          android:layout_marginTop="30dp"
          android:layout_width = "150dp"
          android:background="@drawable/apollo_logout_button"
          android:gravity="center"
          android:layout_centerHorizontal="true"
          android:singleLine="true"
          android:text="@string/sign_out_button_string"
          android:visibility="gone"
          />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:id="@+id/relative_layout_wrapper"
          >

        <Button
            android:id="@+id/login_btn"
            style="@style/apolloDarkButton"
            android:layout_width="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/apollo_login_button"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/login_button_string" />

        <Button
            android:id="@+id/login_info_btn"
            style="@style/apolloDarkButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/ic_question"
            android:textColor="@color/dark_gray_apollo" />
      </RelativeLayout>


      <Space
          android:layout_width="match_parent"
          android:layout_height="60dp" />

    </LinearLayout>
  </ScrollView>


</LinearLayout>
